--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,24 @@ a {
 .btn:hover {
   opacity: 0.8;
 }
+.section-heading {
+  color: #10375c;
+
+  font-size: 5rem;
+
+  font-weight: 600;
+  line-height: 1.2; /* 120% */
+  letter-spacing: -1px;
+}
+.section-desc {
+  margin-top: 18px;
+  color: var(--header-bg);
+
+  font-size: 1.8rem;
+
+  font-weight: 300;
+  line-height: 1.67; /* 166.667% */
+}
 /* ========== header ========= */
 .header {
   background-color: var(--header-bg);
@@ -137,4 +155,78 @@ a {
   height: 410px;
   border-radius: 0px 6px 6px 0px;
   object-fit: cover;
+}
+/* ================== Services ================= */
+.service {
+  padding: 170px 0;
+  background-color: #fff;
+}
+
+.service__heading,
+.service__desc {
+  text-align: center;
+}
+.section-desc {
+  width: 468px;
+  margin: 0 auto;
+}
+.service__row {
+  margin-top: 72px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.service__img {
+  width: 570px;
+  height: 570px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+.service-item {
+  display: flex;
+  padding: 21px;
+  width: 470px;
+  border-radius: 10px;
+  background-color: #fff;
+  transition: 0.25s;
+}
+.service-item:hover {
+  position: relative;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+.service-item:hover .service-item__icon {
+  color: #fff;
+  background-color: #2e80ce;
+}
+.service-item__icon {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  background: #eff6fd;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.05);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  margin-right: 19px;
+  transition: 0.25s;
+}
+.service-item__heading {
+  color: #10375c;
+
+  font-size: 1.8rem;
+
+  font-weight: 600;
+}
+.service-item__desc {
+  margin-top: 8px;
+  color: #575f66;
+
+  font-size: 1.6rem;
+
+  font-weight: 300;
+  line-height: 1.75; /* 175% */
+}
+.Services__btn {
+  margin-top: 55px;
 }
