p6 code phan work

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,9 +166,9 @@ a {
 .service__desc {
   text-align: center;
 }
-.section-desc {
+.service__desc {
   width: 468px;
-  margin: 0 auto;
+  margin: 18px auto 0;
 }
 .service__row {
   margin-top: 72px;
@@ -229,4 +229,52 @@ a {
 }
 .Services__btn {
   margin-top: 55px;
+}
+/*==================== work ================= */
+.work {
+  padding: 100px 0;
+  background-color: #f6fbff;
+}
+.work__desc {
+  width: 468px;
+}
+.work__list {
+  margin-top: 86px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+}
+.work-item {
+  padding: 43px;
+  border-radius: 4px;
+  background: #fff;
+
+  border: 16px solid #eaf6ff;
+}
+.work-item:hover {
+  border-color: #2e80ce;
+  transition: 0.25s;
+  transform: translateY(-16px);
+}
+.work-item__heading {
+  margin-top: 18px;
+  color: #10375c;
+  font-size: 2.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.36; /* 138.462% */
+}
+.work-item__desc {
+  margin-top: 28px;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.57; /* 175% */
+}
+.work-item__more {
+  display: inline-block;
+  margin-top: 18px;
+  color: #2e80ce;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
 }
