--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -278,3 +278,44 @@ a {
   font-size: 1.6rem;
   line-height: 1.75; /* 175% */
 }
+/* ================= about  ====================== */
+.about {
+  margin-top: 85px;
+  padding: 85px 0 206px;
+}
+.about-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about__media {
+  width: 49%;
+}
+.about-content {
+  width: 40%;
+}
+.about__img {
+  position: relative;
+}
+
+.about__img--big {
+  display: flex;
+  width: 512px;
+  height: 370px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.07);
+  object-fit: cover;
+}
+.about__img--small {
+  width: 332px;
+  height: 370px;
+  border-radius: 6px;
+  object-fit: cover;
+  position: absolute;
+  top: 121px;
+  left: 238px;
+}
+.about-content__btn {
+  margin-top: 38px;
+}
