--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,32 @@ a {
   font-weight: 300;
   line-height: 1.67; /* 166.667% */
 }
+.control {
+  display: flex;
+  column-gap: 18px;
+  align-items: center;
+}
+.control__btn {
+  width: 36px;
+  height: 36px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid #575f66;
+  cursor: pointer;
+  color: #10375c;
+  transition: 0.25s;
+}
+.control__btn:hover {
+  color: #fff;
+  background-color: #2e80ce;
+  border-color: #2e80ce;
+}
+.control__icon--next {
+  transform: rotate(180deg);
+}
 /* ========== header ========= */
 .header {
   background-color: var(--header-bg);
@@ -318,4 +344,61 @@ a {
 }
 .about-content__btn {
   margin-top: 38px;
+}
+/* ====================team ================== */
+.team {
+  padding: 85px 0;
+}
+.team-header {
+  text-align: center;
+  margin: 0 auto;
+}
+.team__cta {
+  margin-top: 38px;
+}
+.team__list {
+  margin-top: 72px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 30px;
+}
+.team-item__theme {
+  display: flex;
+  height: 290px;
+  max-width: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  transition: 0.5s;
+}
+.team-item__img {
+  padding-top: 28px;
+  width: 270px;
+  height: 318px;
+  border-radius: 6px;
+  background: #eaf6ff;
+}
+.team-item__name {
+  margin-top: 12px;
+  color: #10375c;
+  text-align: center;
+
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+.team-item__desc {
+  color: #575f66;
+  text-align: center;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.85; /* 185.714% */
+}
+.team-item:hover .team-item__theme {
+  transform: scale(1.1);
+}
+.team__control {
+  margin-top: 38px;
+  justify-content: center;
 }
