--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,13 @@ a {
 .control__icon--next {
   transform: rotate(180deg);
 }
+input,
+textarea,
+select,
+button {
+  font-family: inherit;
+  font-size: inherit;
+}
 /* ========== header ========= */
 .header {
   background-color: var(--header-bg);
@@ -541,4 +548,137 @@ a {
 }
 .blog-item__more:hover {
   color: #2e80ce;
+}
+/* ======== appointment=============== */
+.appointment {
+  margin-top: 85px;
+}
+.appointment__inner {
+  padding: 100px 178px;
+  background: #f6fbff;
+  text-align: center;
+}
+.appointment__heading::after {
+  content: "";
+  display: block;
+  width: 136px;
+  height: 2px;
+  background: #2e80ce;
+  margin: 18px auto 0;
+}
+.appointment__desc {
+  margin: 18px auto 0;
+  max-width: 617px;
+}
+.appointment__btn {
+  margin-top: 38px;
+}
+/* ================ footer ================== */
+.footer {
+  background-color: #10375c;
+  padding-top: 100px;
+  margin-top: 170px;
+  font-family: "Open Sans", sans-serif;
+}
+.footer__top {
+  display: grid;
+  grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+  column-gap: 78px;
+}
+.footer__desc {
+  margin-top: 21px;
+  color: #a9b3bb;
+
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+.footer__heading {
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+}
+.footer__list {
+  margin: 20px 0 28px;
+}
+.footer__link {
+  color: #a9b3bb;
+  font-size: 1.4rem;
+
+  line-height: 1.86; /* 185.714% */
+  white-space: nowrap;
+}
+.footer__item {
+  margin-bottom: 10px;
+}
+.footer__link:hover {
+  text-decoration: underline;
+}
+.footer__social {
+  margin: 20px 0 28px;
+  display: flex;
+  column-gap: 10px;
+}
+.footer__social-btn {
+  background-color: #fff;
+  width: 32px;
+  height: 32px;
+  color: #2e80ce;
+  border-radius: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__social-btn:hover {
+  background-color: #2e80ce;
+  color: #fff;
+}
+.footer__form {
+  margin-top: 10px;
+  display: flex;
+  gap: 12px;
+}
+.footer__form input {
+  width: 212px;
+  height: 46px;
+  border-radius: 4px;
+  border: 1px solid #406181;
+  background: transparent;
+  outline: none;
+  color: #fff;
+}
+.footer-form__input::placeholder {
+  color: #9ca8b1;
+
+  font-size: 1.4rem;
+
+  line-height: 1.6; /* 185.714% */
+}
+.footer-form__submit {
+  width: 108px;
+  height: 46px;
+  border-radius: 4px;
+  background: #2e80ce;
+  color: #fff;
+
+  font-size: 1.4rem;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  line-height: 1.86; /* 185.714% */
+}
+.footer-form__submit:hover {
+  opacity: 0.8;
+}
+.footer__copyright {
+  border-top: 1px solid #406181;
+}
+.footer__copyright--text {
+  padding: 28px 0 42px;
+  color: #aab3ba;
+  text-align: center;
+
+  font-size: 1.4rem;
+
+  line-height: 1.86; /* 185.714% */
 }
