--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -682,3 +682,9 @@ button {
 
   line-height: 1.86; /* 185.714% */
 }
+[data-aos] {
+  visibility: hidden;
+}
+[data-aos].animate__animated {
+  visibility: visible;
+}
