--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,8 @@
 /* pc */
 @media (min-width: 992px) {
+  .mobile-header {
+    display: none;
+  }
 }
 /* tablet & mobile */
 @media (max-width: 991.98px) {
@@ -38,6 +41,43 @@
   #menu-checkbox:checked ~ .menu-overlate {
     opacity: 1;
     visibility: visible;
+  }
+  /* menu drawer */
+  .menu-drawer {
+    position: fixed;
+    background-color: #2e1919;
+    inset: 0 40% 0 0;
+    z-index: 2;
+    transform: translateX(-100%);
+    transition: 0.5s;
+    padding: 60px;
+  }
+  #menu-checkbox:checked ~ .menu-drawer {
+    transform: translateX(0);
+  }
+  /* menu top */
+  .close__menu {
+    width: 24px;
+    color: #fff;
+  }
+  .menu-drawer__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav__list {
+    margin-top: 25px;
+    flex-direction: column;
+  }
+  #navbar__list--mobile {
+    margin-top: 25px;
+  }
+  .navbar__link {
+    display: block;
+    font-size: 2rem;
+  }
+  .navbar__link:hover {
+    color: #ffff37;
   }
 }
 /* tablet */
